<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_change_password"
        android:title="@string/str_change_password"
        android:visible="true"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_developer"
        android:title="@string/str_developer"
        android:visible="true"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_opensource"
        android:title="@string/str_opensource_license"
        android:visible="true"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_logout"
        android:title="@string/str_sign_out"
        android:visible="true"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_delete_mail"
        android:title="@string/str_delete_mail"
        android:visible="true"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_heart_mark"
        android:title="@string/str_heart_mark"
        android:visible="true"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_read_mark"
        android:title="@string/str_read_mark"
        android:visible="true"
        app:showAsAction="never"
        />

  <!--  <item
        android:id="@+id/action_select_all"
        android:title="@string/str_select_all"
        android:visible="true"
        app:showAsAction="never"
        />-->

</menu>