<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data class="com.coupleblog.fragment.DeveloperBinding">

        <variable
            name="fragment"
            type="com.coupleblog.fragment.info.CB_DeveloperFragment" />

        <variable
            name="viewModel"
            type="com.coupleblog.singleton.CB_ViewModel.Companion" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/normal_margin"
            android:clipToPadding="true"
            android:overScrollMode="never"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/developer_background">

                <TextView
                    android:id="@+id/title_text_view"
                    style="@style/title_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/version_text_view"
                    style="@style/subtitle_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_32dp"
                    android:paddingBottom="@dimen/admob_banner_bottom_padding"
                    android:text="@{viewModel.strVersion}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/developer_blog_link_text"
                    tools:text="1.1.1" />

                <ImageView
                    android:id="@+id/couple_blog_image_view"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="@dimen/margin_32dp"
                    android:src="@drawable/couple_blog"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title_text_view" />

                <TextView
                    android:id="@+id/developer_text"
                    style="@style/normal_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_32dp"
                    android:text="@string/str_developer_text"
                    android:textSize="@dimen/text_size_18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/couple_blog_image_view" />

                <TextView
                    android:id="@+id/insta_link"
                    style="@style/normal_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_32dp"
                    android:text="@string/str_insta"
                    android:textSize="@dimen/text_size_16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/developer_text" />

                <TextView
                    android:id="@+id/insta_link_text"
                    style="@style/normal_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:onClick="@{()->fragment.instaLinkButton()}"
                    android:text="@string/str_insta_link"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/text_size_16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.492"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/insta_link" />

                <TextView
                    android:id="@+id/github_text"
                    style="@style/normal_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:text="@string/str_couple_blog_github"
                    android:textSize="@dimen/text_size_16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/insta_link_text" />

                <TextView
                    android:id="@+id/github_link_text"
                    style="@style/normal_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:onClick="@{()->fragment.githubLinkButton()}"
                    android:text="@string/str_couple_blog_github_link"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/text_size_16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/github_text" />

                <TextView
                    android:id="@+id/developer_blog_text"
                    style="@style/normal_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:text="@string/str_developer_blog"
                    android:textSize="@dimen/text_size_16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/github_link_text" />

                <TextView
                    android:id="@+id/developer_blog_link_text"
                    style="@style/normal_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:onClick="@{()->fragment.blogLinkButton()}"
                    android:text="@string/str_developer_blog_link"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/text_size_16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/developer_blog_text" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>