<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/past_event_text_view"
        style="@style/post_title_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:paddingStart="@dimen/margin_16dp"
        android:paddingEnd="@dimen/margin_16dp"
        android:text="@string/str_past_event"
        android:textAlignment="center" />

    <ListView
        android:id="@+id/past_event_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/past_event_text_view"
        android:nestedScrollingEnabled="false"
        android:overScrollMode="never"
        android:stackFromBottom="true"
        tools:itemCount="3"
        tools:listitem="@layout/cb_days_item" />

    <TextView
        android:id="@+id/future_event_text_view"
        style="@style/post_title_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/past_event_list_view"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_16dp"
        android:paddingStart="@dimen/margin_16dp"
        android:paddingEnd="@dimen/margin_16dp"
        android:text="@string/str_future_event"
        android:textAlignment="center" />

    <ListView
        android:id="@+id/future_event_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/future_event_text_view"
        android:nestedScrollingEnabled="false"
        android:overScrollMode="never"
        android:stackFromBottom="true"
        tools:itemCount="3"
        tools:listitem="@layout/cb_days_item" />

    <TextView
        android:id="@+id/annual_event_text_view"
        style="@style/post_title_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/future_event_list_view"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_16dp"
        android:paddingStart="@dimen/margin_16dp"
        android:paddingEnd="@dimen/margin_16dp"
        android:text="@string/str_annual_event"
        android:textAlignment="center" />

    <ListView
        android:id="@+id/annual_event_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/annual_event_text_view"
        android:nestedScrollingEnabled="false"
        android:overScrollMode="never"
        android:stackFromBottom="true"
        tools:itemCount="3"
        tools:listitem="@layout/cb_days_item" />

</RelativeLayout>
